# python-lib-cookiecutter

./: .flake8  Makefile  README.md  catalog-info.yaml  cookiecutter.json  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md
{{cookiecutter.project_name}}/: .flake8  .gitignore  Makefile  README.md  bitbucket-pipelines.yml  catalog-info.yaml  mkdocs.yml  pyproject.toml  requirements.txt
{{cookiecutter.project_name}}/docs/: index.md
{{cookiecutter.project_name}}/module1/__tests__/: test_add.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name_slug}}/module1/__tests__/: test_add.py
