[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "1.3.5"
description = ""
authors = ["Making Science"]
readme = "README.md"
packages = [{include = "{{cookiecutter.project_name}}"}]
include = ["pre-commit-config.yaml"]

[tool.poetry.dependencies]
python = "^3.8.1"
flake8 = "^6.0.0"
google-api-python-client = "^2.80.0"
google-cloud-bigquery = "^3.6.0"
isort = "^5.12.0"
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
extend-exclude="# noqa"

[[tool.poetry.source]]
name = "syscorp-librarian"
url = "https://europe-west1-python.pkg.dev/ms--tiber-com-lib--pro--8bd7/syscorp-librarian"
default = false
secondary = true
