[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.0.0"
description = "{{cookiecutter.project_description}}"
authors = ["Making Science"]
readme = "README.md"
packages = [{include = "{{cookiecutter.project_name_slug}}"}]
include = ["pre-commit-config.yaml"]

[tool.poetry.dependencies]
python = "^3.8.1"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
extend-exclude="# noqa"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
